Fix centering for baseFolder-not-found error
Previously, the error message would be placed in a div after the main
list table. Since the width was fixed, the error message would be
off-center. With this commit, the list table is only added to the doc if
the base folder was found, fixing the centering for the error message.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -62,6 +62,7 @@ body {
   height: auto;
 
   font-size: 24px;
+  text-align: center;
 }
 
 .errMsg__link {
